kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: notessvc
spec:
  type: NodePort
  selector:
    app: notes
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
