kubernetes/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: example-ingress
  annotations:
    kubernetes.io/ingress.global-static-ip-name: example-ip-address
    networking.gke.io/managed-certificates: notes-certificate
    kubernetes.io/ingress.allow-http: "false"
spec:
  backend:
    serviceName: notessvc
    servicePort: 80
